fix(portfolio): Fixed portfolio description being capped on smaller screens

--- a/src/app/portfolio/portfolio-item/portfolio-item.component.scss
+++ b/src/app/portfolio/portfolio-item/portfolio-item.component.scss
@@ -19,7 +19,7 @@
 }
 
 .portfolio-item:hover .portfolio-item--body {
-  max-height: 40vh;
+  max-height: 100vh;
   opacity: 1;
 }
 
